# Ucode-Stage2

./: .gitignore  CMakeLists.txt  main.c
Libmx/: CMakeLists.txt  main.c
Libmx/assests/: read_line.txt
Libmx/assets/: file_to_str.txt
Libmx/inc/: libmx.h
Libmx/src/compare/: char_comp.c  int_comp.c  multi_comp.c  str_comp.c
Libmx/src/list/: mx_create_node.c  mx_list_size.c  mx_pop_back.c  mx_pop_front.c  mx_push_back.c  mx_push_front.c  mx_sort_list.c
Libmx/src/memory/: mx_free.c  mx_malloc.c  mx_malloc_size.c  mx_memccpy.c  mx_memchr.c  mx_memcmp.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_memrchr.c  mx_memset.c  mx_realloc.c
Libmx/src/strings/: mx_count_substr.c  mx_count_words.c  mx_del_extra_spaces.c  mx_del_strarr.c  mx_delete_trailing_char.c  mx_file_to_str.c  mx_get_char_index.c  mx_get_substr_index.c  mx_itoa.c  mx_read_line.c  mx_replace_substr.c  mx_str_reverse.c  mx_strcat.c  mx_strcmp.c  mx_strcpy.c  mx_strdel.c  mx_strdup.c  mx_strjoin.c  mx_strlen.c  mx_strncat.c  mx_strncmp.c  mx_strncpy.c  mx_strndup.c  mx_strnew.c  mx_strsplit.c  mx_strstr.c  mx_strtrim.c  mx_swap_char.c
Libmx/src/utils/: mx_binary_search.c  mx_bubble_sort.c  mx_foreach.c  mx_get_hex_digits_count.c  mx_hex_to_nbr.c  mx_intlen.c  mx_is_whitespace.c  mx_itoa.c  mx_nbr_to_hex.c  mx_pow.c  mx_print_strarr.c  mx_print_unicode.c  mx_printchar.c  mx_printint.c  mx_printstr.c  mx_quicksort.c  mx_sqrt.c  mx_str_swap.c
Refresh-Marathon-C/t02/: mx_strlen.c
Refresh-Marathon-C/t04/: mx_printint.c
Refresh-Marathon-C/t05/: mx_pow.c
Refresh-Marathon-C/t08/: mx_strcmp.c
Refresh-Marathon-C/t09/: mx_strcpy.c
Refresh-Marathon-C/t10/: mx_strlen.c
Refresh-Marathon-C/t11/: mx_print_sargs.c
Refresh-Marathon-C/t12/: mx_factorial_iter.c
Refresh-Marathon-C/t14/: mx_binary_search.c  mx_strcmp.c
Refresh-Marathon-C/t16/: mx_strdup.c
Refresh-Marathon-C/t17/: mx_hex_to_nbr.c
Refresh-Marathon-C/t18/: mx_foreach.c
t00/: mx_printchar.c
t01/: mx_print_alphabet.c
t03/: mx_printstr.c
t04/: mx_printint.c
t05/: mx_pow.c
t06/: mx_sqrt.c
t07/: mx_sort_arr_int.c
t08/: mx_strcmp.c
t10/: mx_print_args.c  mx_printchar.c
t11/: mx_print_sargs.c  mx_printstr.c  mx_strcmp.c  mx_strlen.c
t12/: mx_factorial_iter.c
t13/: mx_bubble_sort.c
t14/: mx_binary_search.c
t15/: mx_strnew.c
t16/: mx_strcpy.c  mx_strdup.c  mx_strlen.c  mx_strnew.c
t17/: mx_hex_to_nbr.c
t18/: mx_foreach.c
